Fixing the whitespace

--- a/boot.css
+++ b/boot.css
@@ -28,7 +28,7 @@ h1{
     /*opacity: 0.7;*/
     max-width: 70%;
     margin: auto;
-    margin-top: 50%;
+    margin-top: 20%;
     border-radius: 20px;
     opacity: 0.9;
 }
